--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "pixels-test",
-  "private": true,
+  "name": "skeleton-rush",
+  "homepage": "https://artmalina.github.io/skeleton-rush",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "tsc && vite build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
+    "gh-pages": "^4.0.0",
     "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
     "typescript": "^4.6.4",
